--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/GreepTheSheep/node-trackmania.io#readme",
   "dependencies": {
     "events": "^3.2.0",
+    "moment-timezone": "^0.5.33",
     "ms": "^2.1.3",
     "node-fetch": "^2.6.1"
   },
