--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,4 +1,4 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
+ This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
 
 name: Node.js Package
@@ -43,6 +43,6 @@ jobs:
           registry-url: https://npm.pkg.github.com/
           scope: '@greepthesheep'
       - run: npm ci
-      - run: npm publish
+      - run: npm publish --registry=https://npm.pkg.github.com/@greepthesheep
         env:
           NODE_AUTH_TOKEN: ${{secrets.gh_token}}
