--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node.js inplementation of Trackmania Live services (trackmania.io)",
   "main": "src/index.js",
   "scripts": {
-    "test": "npx eslint . && node ./run_tests.js"
+    "test": "eslint . && mocha",
+    "oldtests": "eslint . && node ./run_tests_old_ver.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   "homepage": "https://github.com/GreepTheSheep/node-trackmania.io#readme",
   "dependencies": {
     "events": "^3.3.0",
+    "mocha": "^8.4.0",
     "moment-timezone": "^0.5.33",
     "ms": "^2.1.3",
     "node-fetch": "^2.6.1"
