--- a/.github/workflows/release-at-merge-main.yml
+++ b/.github/workflows/release-at-merge-main.yml
@@ -12,12 +12,14 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - name: get version
         id: version
         uses: notiz-dev/github-action-json-property@release
         with: 
           path: 'package.json'
           prop_path: 'version'
+      - run: echo ${{steps.version.outputs.prop}}
 
       
       - name: Release
