--- a/.github/workflows/release-at-merge-main.yml
+++ b/.github/workflows/release-at-merge-main.yml
@@ -24,7 +24,7 @@ jobs:
       
       - name: Release
         id: create_release
-        if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
+        if: github.event.pull_request.merged
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
