--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,5 +9,13 @@
         "ecmaVersion": 12
     },
     "rules": {
+        "indent": [
+            "error",
+            4
+        ],
+        "semi": [
+            "error",
+            "always"
+        ]
     }
 }
