--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trackmania.io",
-  "version": "2.4.0",
+  "version": "3.0.0",
   "description": "Node.js inplementation of Trackmania Live services (trackmania.io)",
   "main": "src/index.js",
   "scripts": {
@@ -30,8 +30,6 @@
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
-    "eslint": "^7.31.0",
-    "fs": "0.0.1-security",
-    "shelljs": "^0.8.4"
+    "eslint": "^7.31.0"
   }
 }
