--- a/.github/workflows/release-at-merge-main.yml
+++ b/.github/workflows/release-at-merge-main.yml
@@ -1,6 +1,3 @@
-#This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
-
 name: Release after PR to main
 
 on:
@@ -27,7 +24,7 @@ jobs:
         if: github.event.pull_request.merged
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{secrets.gh_token}}
         with:
           tag_name: v${{steps.version.outputs.prop}} 
           release_name: Release ${{steps.version.outputs.prop}} 
