--- a/.github/workflows/dts-build.yml
+++ b/.github/workflows/dts-build.yml
@@ -27,10 +27,12 @@ jobs:
         persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
         fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
 
-    - name: Build d.ts files on Node.js ${{ matrix.node-version }}
+    - name: Setup Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+      
+    - name: Build d.ts files
       run: npm ci
       run: npm run dts
     
