--- a/.github/workflows/dts-build.yml
+++ b/.github/workflows/dts-build.yml
@@ -7,6 +7,17 @@ on:
     paths:
       - 'src/**.js'
 
+  workflow_dispatch:
+    # Inputs the workflow accepts.
+    inputs:
+      name:
+        # Friendly description to be shown in the UI instead of 'name'
+        description: 'Build DefinitelyTyped files'
+        # Default value if no value is explicitly provided
+        default: 'yes'
+        # Input has to be provided for the workflow to run
+        required: true
+
 permissions: write-all
 
 jobs:
