--- a/.github/workflows/dts-build.yml
+++ b/.github/workflows/dts-build.yml
@@ -26,7 +26,7 @@ jobs:
     steps:
     - name: Get current date
       id: date
-      run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+      run: echo "::set-output name=date::$(date +'%Y-%m-%d %H:%M:%S')"
 
     - uses: actions/checkout@v2
       with:
