--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,7 +15,10 @@
         {
             "type": "npm",
             "script": "test",
-            "group": "test",
+            "group": {
+                "kind": "test",
+                "isDefault": true
+            },
             "problemMatcher": [],
             "label": "npm: test",
             "detail": "tsc && eslint . && mocha",
