--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "types": "typings/index.d.ts",
   "scripts": {
-    "test": "tsc && eslint . && mocha",
+    "test": "eslint . && mocha",
     "dts": "tsc"
   },
   "repository": {
