--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "types": "typings/index.d.ts",
   "scripts": {
     "test": "eslint . && mocha",
-    "dts": "tsc"
+    "dts": "tsc",
+    "docs": "docgen --source src --custom docs/index.yml --output docs/docs.json"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
+    "@discordjs/docgen": "^0.10.0",
     "eslint": "^7.31.0",
     "typescript": "^4.4.2"
   }
