--- a/.github/workflows/release-at-merge-main.yml
+++ b/.github/workflows/release-at-merge-main.yml
@@ -8,20 +8,21 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
+
     steps:
-      - uses: actions/checkout@v1
-      - name: get version
+      - name: Checkout
+        uses: actions/checkout@v1
+
+      - name: Get Version from package.json
         id: version
         uses: notiz-dev/github-action-json-property@release
         with: 
           path: 'package.json'
           prop_path: 'version'
-      - run: echo ${{steps.version.outputs.prop}}
 
-      
       - name: Release
         id: create_release
-        if: github.event.pull_request.merged
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{secrets.gh_token}}
