--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "types": "typings/index.d.ts",
   "scripts": {
-    "test": "eslint . && mocha",
+    "test": "eslint . && mocha --exit",
     "build": "tsc && docgen --source src --custom docs/index.yml --output docs/docs.json",
     "dts": "tsc",
     "docs": "docgen --source src --custom docs/index.yml --output docs/docs.json"
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@discordjs/docgen": "^0.10.0",
+    "dotenv": "^10.0.0",
     "eslint": "^7.31.0",
     "typescript": "^4.4.2"
   }
