--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,16 +1,10 @@
-name: Node.js CI & Tests
+name: Unit Tests (Pull Request)
 
 on:
   pull_request:
     branches:
       - main
       - develop
-  push:
-    branches-ignore:
-      - main
-  paths:
-      - 'src/**.js'
-      - 'test/**.test.js'
 
 jobs:
   test:
