--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -47,7 +47,7 @@ jobs:
   
   typings:
     name: Build Typings
-    after: test
+    needs: test
     runs-on: ubuntu-latest
     if: ${{ github.ref != 'refs/heads/main' }}
 
@@ -88,7 +88,7 @@ jobs:
 
   docs:
     name: Build Documentation
-    after: test
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
