--- a/.github/workflows/typings.yml
+++ b/.github/workflows/typings.yml
@@ -1,50 +1,17 @@
-name: Unit Test (Push) & Builds
+name: Build Definitions
 
 on: 
   push:
     branches-ignore:
       - 'docs'
-    tags:
-      - '*'
+      - 'main'
     paths:
       - 'src/**.js'
-      - 'test/**.test.js'
-
   workflow_dispatch:
-    inputs:
-      test:
-        description: 'Unit Tests'
-      typings:
-        description: 'Build Typings'
-      docs:
-        description: 'Build Documantation'
 
 permissions: write-all
 
 jobs:
-  test:
-    name: Unit Tests
-    if: ${{ github.ref != 'refs/heads/main' }}
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Install Node v16
-      uses: actions/setup-node@v2
-      with:
-        node-version: 16
-        cache: npm
-
-    - name: Install dependencies
-      run: npm ci
-
-    - name: Run tests
-      run: npm test
-      env:
-        TMIO_API: ${{ secrets.TMIO_API }}
-  
   typings:
     name: Build Typings
     runs-on: ubuntu-latest
@@ -86,24 +53,3 @@ jobs:
       with:
         github_token: ${{ secrets.gh_token }}
         branch: ${{ github.ref }}
-
-  docs:
-    name: Build Documentation
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Install Node v16
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16
-          cache: npm
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build and deploy documentation
-        uses: discordjs/action-docs@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
