Check if branch is not in a PR

--- a/.github/workflows/unit-tests-push.yml
+++ b/.github/workflows/unit-tests-push.yml
@@ -11,6 +11,8 @@ on:
 
 jobs:
   test:
+    # check if the branch is not in a pull request
+    if: ${{ github.event.pull_request != "opened" }}
     name: Unit Tests
     runs-on: ubuntu-latest
 
