push unit-tests on branch develop

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -2,8 +2,8 @@ name: Unit Tests
 
 on:
   push:
-    branches-ignore:
-      - 'main'
+    branches:
+      - 'develop'
     paths:
       - 'src/**.js'
       - 'test/**.test.js'
