--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,11 @@
-name: Build Definitions
+name: Builds
 
 on: 
   push:
     branches-ignore:
       - 'docs'
-      - 'main'
+    tags:
+      - '*'
     paths:
       - 'src/**.js'
   workflow_dispatch:
@@ -12,6 +13,27 @@ on:
 permissions: write-all
 
 jobs:
+  docs:
+    name: Build Documentation
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Install Node v16
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+          cache: npm
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build and deploy documentation
+        uses: discordjs/action-docs@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
   typings:
     name: Build Typings
     runs-on: ubuntu-latest
@@ -41,14 +63,26 @@ jobs:
       run: |
         npm run dts
         npx tsc
+
+    - name: Check if changes were made
+      id: check-changes
+      run: |
+        if [ -z "$(git diff --name-only HEAD)" ]; then
+          ::set-output name=changed::false
+        else
+          ::set-output name=changed::true
+        fi
+        fi
     
     - name: Commit files
+      if: steps.check-changes.outputs.changed == 'true'
       run: |
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git commit -am ":children_crossing: Build DefinitelyTyped - ${{ steps.vars.outputs.sha }}"
 
     - name: Push changes
+      if: steps.check-changes.outputs.changed == 'true'
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.gh_token }}
