--- a/package.json
+++ b/package.json
@@ -26,16 +26,14 @@
   },
   "homepage": "https://github.com/GreepTheSheep/node-trackmania.io#readme",
   "dependencies": {
-    "events": "^3.3.0",
-    "mocha": "^9.0.3",
-    "moment-timezone": "^0.5.33",
-    "ms": "^2.1.3",
-    "node-fetch": "^2.6.1"
+    "events": "3.3.0",
+    "node-fetch": "2.6.1"
   },
   "devDependencies": {
-    "@discordjs/docgen": "^0.10.0",
-    "dotenv": "^10.0.0",
-    "eslint": "^7.31.0",
-    "typescript": "^4.5.2"
+    "@discordjs/docgen": "0.10.0",
+    "dotenv": "10.0.0",
+    "eslint": "7.31.0",
+    "mocha": "9.1.3",
+    "typescript": "4.5.2"
   }
 }
