Adding some examples

--- a/docs/index.yml
+++ b/docs/index.yml
@@ -9,6 +9,15 @@
 
 - name: Examples
   files:
-    - name: Get TOTD when it came out
+    - name: Today's TOTD
+      id: totd
+      path: ../../examples/totd.md
+    - name: TOTD alert
       id: totdEvent
       path: ../../examples/totdEvent.md
+    - name: Player's COTD stats
+      id: playerCOTD
+      path: ../../examples/playerCOTD.md
+    - name: Current official campaign
+      id: currentCampaign
+      path: ../../examples/officialCampaign.md
