--- a/.github/workflows/publish-dev.yml
+++ b/.github/workflows/publish-dev.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Check previous released version
         id: pre-release
         run: |
-          if [[ $(npm view trackmania.io@dev version | grep -e "$(jq --raw-output '.version' package.json).*.$(git rev-parse --short HEAD | cut -b1-3)") ]]; \
+          if [[ $(npm view trackmania.io@dev version | grep -e "$(jq --raw-output '.version' package.json)-dev.*.$(git rev-parse --short HEAD | cut -b1-3)") ]]; \
           then echo '::set-output name=release::false'; \
           else echo '::set-output name=release::true'; fi
 
@@ -31,16 +31,10 @@ jobs:
         if: steps.pre-release.outputs.release == 'true'
         run: npm ci --ignore-scripts
 
-      - name: Deprecate old versions
-        if: steps.pre-release.outputs.release == 'true'
-        run: npm deprecate trackmania.io@"~$(jq --raw-output '.version' package.json)" "no longer supported" || true
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
-
       - name: Publish
         if: steps.pre-release.outputs.release == 'true'
         run: |
-          npm version --git-tag-version=false $(jq --raw-output '.version' package.json).$(date +%d%m%a).$(git rev-parse --short HEAD)
+          npm version --git-tag-version=false $(jq --raw-output '.version' package.json)-dev.$(date +%d%m%y).$(git rev-parse --short HEAD)
           npm publish --tag dev || true
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
@@ -64,14 +58,14 @@ jobs:
       - name: Check previous released version
         id: pre-release
         run: |
-          if [[ $(npm view trackmania.io@dev version | grep -e "$(jq --raw-output '.version' package.json).*.$(git rev-parse --short HEAD | cut -b1-3)") ]]; \
+          if [[ $(npm view trackmania.io@dev version | grep -e "$(jq --raw-output '.version' package.json)-dev.*.$(git rev-parse --short HEAD | cut -b1-3)") ]]; \
           then echo '::set-output name=release::false'; \
           else echo '::set-output name=release::true'; fi
 
       - name: Get Version
         if: steps.pre-release.outputs.release == 'true'
         id: version
-        run: "::set-output name=version::$(jq --raw-output '.version' package.json).$(date +%d%m%a).$(git rev-parse --short HEAD)"
+        run: "echo '::set-output name=version::$(jq --raw-output '.version' package.json)-dev.$(date +%d%m%y).$(git rev-parse --short HEAD)'"
 
       - name: Release
         if: steps.pre-release.outputs.release == 'true'
