--- a/.github/workflows/release-at-merge-main.yml
+++ b/.github/workflows/release-at-merge-main.yml
@@ -1,14 +1,15 @@
 name: Release after PR to main
 
 on:
-  push:
-    branches:
+  pull_request:
+    branches: 
       - main
+    types: [closed]
 
 jobs:
   release:
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
+    if: ${{ github.event.pull_request.merged }}
 
     steps:
       - name: Checkout
