--- a/.github/workflows/publish-dev.yml
+++ b/.github/workflows/publish-dev.yml
@@ -3,6 +3,7 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
+
 jobs:
   npm:
     name: npm
@@ -64,8 +65,10 @@ jobs:
 
       - name: Get Version
         if: steps.pre-release.outputs.release == 'true'
-        id: version
-        run: "echo -n '::set-output name=version::$(jq --raw-output '.version' package.json)-dev.$(date +%d%m%y).$(git rev-parse --short HEAD)'"
+        id: get-version
+        run: |
+          echo -n '$(jq --raw-output '.version' package.json)-dev.$(date +%d%m%y).$(git rev-parse --short HEAD)' \s
+          echo -n '::set-output name=version::$(jq --raw-output '.version' package.json)-dev.$(date +%d%m%y).$(git rev-parse --short HEAD)'
 
       - name: Release
         if: steps.pre-release.outputs.release == 'true'
@@ -74,7 +77,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{secrets.gh_token}}
         with:
-          tag_name: v${{steps.version.outputs.version}} 
-          release_name: Release ${{steps.version.outputs.version}} 
+          tag_name: v${{steps.get-version.outputs.version}} 
+          release_name: Dev Release ${{steps.get-version.outputs.version}} 
           draft: false
           prerelease: true
