--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,8 +6,8 @@ on:
       - 'docs'
     tags:
       - '*'
-    paths:
-      - 'src/**.js'
+    paths-ignore:
+      - 'typings/**'
   workflow_dispatch:
 
 permissions: write-all
