--- a/.github/workflows/publish-dev.yml
+++ b/.github/workflows/publish-dev.yml
@@ -47,3 +47,5 @@ jobs:
       - name: Deprecate old dev version
         if: steps.pre-release.outputs.release == 'true'
         run: "npm deprecate trackmania.io@${{ steps.get-version.outputs.version }} 'no longer supported'"
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
