--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,10 +22,21 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Get latest version
+        id: get-version
+        if: steps.pre-release.outputs.release == 'true'
+        run: "echo '::set-output name=version::$(npm view trackmania.io version)'"
+
       - name: Publish on NPM
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+
+      - name: Deprecate old version
+        if: steps.pre-release.outputs.release == 'true'
+        run: "npm deprecate trackmania.io@${{ steps.get-version.outputs.version }} 'no longer supported'"
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
 
   publish-gpr:
     name: Publish on Github Packages
