--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,19 +22,15 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Get latest version
-        id: get-version
-        run: "echo '::set-output name=version::$(npm view trackmania.io version)'"
+      - name: Deprecate old version
+        run: "npm deprecate trackmania.io@$(npm view trackmania.io version) 'no longer supported'"
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
 
       - name: Publish on NPM
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
-
-      - name: Deprecate old version
-        run: "npm deprecate trackmania.io@${{ steps.get-version.outputs.version }} 'no longer supported'"
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
 
   publish-gpr:
     name: Publish on Github Packages
