Revert "Update publish-dev.yml"
This reverts commit c5df48d4485540823db0dd942f8f415d3805a7ee.

--- a/.github/workflows/publish-dev.yml
+++ b/.github/workflows/publish-dev.yml
@@ -27,6 +27,10 @@ jobs:
           then echo '::set-output name=release::false'; \
           else echo '::set-output name=release::true'; fi
 
+      - name: Install dependencies
+        if: steps.pre-release.outputs.release == 'true'
+        run: npm ci --ignore-scripts
+
       - name: Deprecate old dev version
         if: steps.pre-release.outputs.release == 'true'
         run: "npm deprecate trackmania.io@$(npm view trackmania.io@dev version) 'no longer supported'"
