--- a/docs/index.yml
+++ b/docs/index.yml
@@ -21,3 +21,6 @@
     - name: Current official campaign
       id: currentCampaign
       path: ../../examples/officialCampaign.md
+    - name: Gratefully catch errors
+      id: errorCatches
+      path: ../../examples/errorCatches.md
