--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
   },
   "homepage": "https://tmio.greep.gq/",
   "dependencies": {
-    "events": "3.3.0",
     "luxon": "^2.3.2",
     "node-fetch": "2.6.7"
   },
   "devDependencies": {
     "@discordjs/docgen": "0.11.1",
+    "@types/luxon": "^2.3.2",
     "dotenv": "16.0.0",
     "eslint": "7.31.0",
     "mocha": "10.0.0",
