--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "typings/index.d.ts",
   "scripts": {
     "test": "eslint . && mocha --exit",
+    "prepack": "tsc",
     "dts": "tsc",
     "docs": "docgen --source src --custom docs/index.yml --output docs/docs.json"
   },
